# vectrade-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: vt-sdk-dev.agent.md  vt-sdk-tester.agent.md
.github/instructions/: agent-workflow.instructions.md
.github/prompts/: update-changelog.prompt.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: conftest.py  test_performance.py
examples/: README.md  async_portfolio.py  developer_usage.py  options_chain.py  quickstart.py  screener.py  streaming_ai.py
src/vectrade/: __init__.py  _client.py  _exceptions.py  _http_wrapper.py  _middleware.py  _pagination.py  _streaming.py  telemetry.py  tier_config.py  webhook_events.py
src/vectrade/_utils/: __init__.py  config.py  encoding.py  headers.py  retry.py
src/vectrade/integrations/: __init__.py  langchain.py
src/vectrade/resources/: __init__.py  ai.py  analyst.py  developer.py  earnings.py  etf.py  fundamentals.py  historical.py  insider.py  news.py  options.py  profile.py  quotes.py  screener.py  sentiment.py  technicals.py  webhooks.py
src/vectrade/types/: __init__.py  analyst.py  earnings.py  etf.py  fundamental.py  historical.py  insider.py  news.py  options.py  profile.py  quote.py  screener.py  sentiment.py  technical.py  webhook.py
tests/: __init__.py  conftest.py  test_ai.py  test_analyst.py  test_async_resources.py  test_client.py  test_config.py  test_developer.py  test_earnings.py  test_error_mapping.py  test_exceptions.py  test_fundamentals.py  test_headers.py  test_insider.py  test_integrations.py  test_live_integration.py  test_middleware.py  test_middleware_and_ai.py  test_news.py  test_options.py  test_pagination.py  test_property_based.py  test_quotes.py  test_retry.py  test_screener.py  test_streaming.py  test_streaming_classes.py  test_sync_coverage_extras.py  test_technicals.py  test_telemetry.py  test_tier_config.py  test_webhook_events.py  test_webhooks.py
